fix for blank spaces and letter-spacing

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -36,3 +36,7 @@ color: lightgreen;
   font-size: 25px;
 }
 
+#cocktailText {
+  letter-spacing: 3px;
+}
+
